# SECI

./: .gitignore  CITATION.cff  LICENSE  README.md  prompts.json  pyproject.toml  requirements.txt
data/scored_sessions/: DATA_README.md
data/scored_sessions/arm_a/: seci_alira-sohen_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_amari-liore_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_aurelian-cross_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_aurelius-veyne_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_auren_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_cael-veyron_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_caelan-ishiro_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_calen-rhyst_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_dr-amara-singh_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_dr-lysira-tenebral_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  seci_dr-nivael-thorne_gemini_3_pro_preview_arm_a_full_framework_v22_analysis.json  (+18 more)
examples/: generate_figures.py  rerate_ncg.py  rescore_dataset.py  run_full_benchmark.py
paper/: refs.bib  seci.tex
validation_outputs/: claim_a_per_model.json  claim_a_population.json  claim_b_per_model.json  claim_b_population.json  claim_c_cross_model.json  fingerprint_discriminant.json  fingerprint_stability.json  variance_decomposition.json  verified_terms.json  warning_flags.json
(+182 files in other folders)
