[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "seci"
version = "2.3.0"
description = "SECI — identity-architecture benchmark with three-arm protocol, claim-decomposed reporting, and variance decomposition"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Nate Travis", email = "labs@devmance.com" }
]
keywords = [
    "ai-safety",
    "benchmark",
    "identity",
    "large-language-models",
    "interpretability",
    "consciousness",
    "scaffolding",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "sentence-transformers>=2.2",
    "requests>=2.31",
]

[project.urls]
Homepage = "https://github.com/devmance/SECI"
Paper = "https://github.com/devmance/SECI/blob/main/paper/seci.pdf"
